fixed half-height block bg. Removed horizontal scroll

--- a/dev/scss/block/_feature-section.scss
+++ b/dev/scss/block/_feature-section.scss
@@ -1,21 +1,28 @@
 .features {
 	position: relative;
+	.section__bg {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 264px;
+		background-color: #e7e7e7;
+		position: absolute;
+		z-index: -1;
+	}
+}
+
+.features .container{
+
 	box-sizing: border-box;
 	display: flex;
 	flex-wrap: wrap;
 	padding: 4px;
 	background-color: #fff;
+	
 
-	.section__bg {
-		position: absolute;
-		bottom: 0;
-		left: -1700px;
-		height: 260px;
-		background-color: #e7e7e7;
-		position: absolute;
-		width: 4500px;
-		z-index: -1;
-	}
+	
 	
 	.features__tile {
 		margin: 5px;
