--- a/distrib/css/main.css
+++ b/distrib/css/main.css
@@ -832,7 +832,19 @@ a {
     right: 0; }
 
 .features {
-  position: relative;
+  position: relative; }
+  .features .section__bg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 264px;
+    background-color: #e7e7e7;
+    position: absolute;
+    z-index: -1; }
+
+.features .container {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: -webkit-box;
@@ -844,22 +856,13 @@ a {
   flex-wrap: wrap;
   padding: 4px;
   background-color: #fff; }
-  .features .section__bg {
-    position: absolute;
-    bottom: 0;
-    left: -1700px;
-    height: 260px;
-    background-color: #e7e7e7;
-    position: absolute;
-    width: 4500px;
-    z-index: -1; }
-  .features .features__tile {
+  .features .container .features__tile {
     margin: 5px;
     position: relative;
     min-height: 250px;
     background-size: cover;
     background-position: 50% 50%; }
-    .features .features__tile:before {
+    .features .container .features__tile:before {
       display: block;
       content: "";
       position: absolute;
@@ -875,7 +878,7 @@ a {
       -webkit-transition: all 200ms;
       -o-transition: all 200ms;
       transition: all 200ms; }
-    .features .features__tile:after {
+    .features .container .features__tile:after {
       position: absolute;
       bottom: 0;
       left: -50%;
@@ -884,7 +887,7 @@ a {
       position: absolute;
       width: 2500px;
       z-index: -1; }
-    .features .features__tile span {
+    .features .container .features__tile span {
       position: absolute;
       bottom: 17%;
       left: 20px;
@@ -894,43 +897,43 @@ a {
       text-transform: uppercase;
       font-style: italic;
       font-size: 24px; }
-    .features .features__tile:hover:before {
+    .features .container .features__tile:hover:before {
       background-color: rgba(0, 0, 0, 0.4); }
-  .features .features__tile_span6 {
+  .features .container .features__tile_span6 {
     width: 49%;
     -webkit-box-flex: 2;
     -webkit-flex-grow: 2;
     -ms-flex-positive: 2;
     flex-grow: 2; }
     @media screen and (max-width: 960px) {
-      .features .features__tile_span6 {
+      .features .container .features__tile_span6 {
         width: 48%;
         -webkit-box-flex: 1;
         -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
         flex-grow: 1; } }
     @media screen and (max-width: 552px) {
-      .features .features__tile_span6 {
+      .features .container .features__tile_span6 {
         width: 100%;
         -webkit-box-flex: 1;
         -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
         flex-grow: 1; } }
-  .features .features__tile_span3 {
+  .features .container .features__tile_span3 {
     width: 24%;
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1; }
     @media screen and (max-width: 960px) {
-      .features .features__tile_span3 {
+      .features .container .features__tile_span3 {
         width: 48%;
         -webkit-box-flex: 1;
         -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
         flex-grow: 1; } }
     @media screen and (max-width: 552px) {
-      .features .features__tile_span3 {
+      .features .container .features__tile_span3 {
         width: 100%;
         -webkit-box-flex: 1;
         -webkit-flex-grow: 1;
